--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         </div>
         <div class="description-sobre">
             <img src="assets/medico.jpg">
-            <h1>AQUI NA NOSSA CLÍNICA VOCÊ VAI ENCONTRAR:</h1>
+            <div class="description-text">
+                <h2>AQUI NA NOSSA CLÍNICA VOCÊ VAI ENCONTRAR:</h2>
             <ul>
                 <li>Horário flexível. Atendimento de segunda à sábado.</li>
                 <li>Estacionamento amplo com 600 vagas.</li>
@@ -58,6 +59,7 @@
                 <li>Excelente localização.</li>
                 <li>Entrega de exames à domicílio.</li>
             </ul>
+            </div>
         </div>
     </div>
 </body>
